--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "test": "NODE_ENV=test mocha",
     "test:ci": "npm run lint && npm run style && npm run test",
     "lint": "eslint .",
-    "style": "jscs **/* --config=./.jscsrc.json",
+    "style": "jscs **/* --config=./.jscsrc",
     "postinstall": "./bin/index"
   },
   "repository": {
