--- a/package.json
+++ b/package.json
@@ -34,15 +34,15 @@
     "eslint-config-homeoffice": "^0.1.4",
     "jscs": "^1.13.1",
     "mocha": "^2.2.5",
-    "pre-commit": "^1.0.10"
+    "pre-commit": "^1.0.10",
+    "proxyquire": "^1.7.9",
+    "sinomocha": "^0.2.4",
+    "sinon": "^1.15.3",
+    "sinon-chai": "^2.8.0"
   },
   "pre-commit": [
     "lint",
     "style",
     "test"
-  ],
-  "dependencies": {
-    "callsites": "^1.0.0",
-    "findup": "^0.1.5"
-  }
+  ]
 }
