--- a/.jscsrc
+++ b/.jscsrc
@@ -1,6 +1,5 @@
 {
   "preset": "google",
   "maximumLineLength": 120,
-  "excludeFiles": ["node_modules/**", "src/*", "test/*"],
-  "esnext": true
+  "excludeFiles": ["node_modules/**", "src/*", "test/*"]
 }
