--- a/src/.jscsrc
+++ b/src/.jscsrc
@@ -1,6 +1,5 @@
 {
   "preset": "google",
   "maximumLineLength": 120,
-  "excludeFiles": ["node_modules/**", "reports/**", "public/**/*"],
-  "esnext"
+  "excludeFiles": ["node_modules/**", "reports/**", "public/**/*"]
 }
